Allow for ConvertWith to use instance methods
Co-authored-by: Olga Razvenskaia <olga.razvenskaia@neo4j.com>